style.css
:root {
    --white: #f8fafc;
    --offwhite: #f0f9ff;
    --gray: #cbd5e1;
    --accent1: #0ea5e9;
    --accent1-light: #f0f9ff;
    --accent2: #eab308;
    --black: #0f172a;
    --offblack: #0f172a;
    --red: indianred;
}

body {
    font-size: 18px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: var(--black, black);

    width: 100vw;
    height: 100vh;
    margin: 0;
    display: grid;
    grid-template-columns: max(300px, 25%) 1fr;
    grid-template-rows: 25% 1fr;
    grid-template-areas: 
        "sidebar top"
        "sidebar bottom";
}

.container.sidebar {
    grid-area: sidebar;
    background-color: var(--accent1);
    color: var(--white);

    display: grid;
    grid-template-columns: min-content 1fr;
    grid-template-rows: repeat(8, min-content);
    grid-template-areas:
    "button button"
    "title-label title-label"
    "title-input title-input"
    "summary-label summary-label"
    "summary-input summary-input"
    "pages-label pages-input"
    "read-label read-input"
    "favorite-label favorite-input";
    gap: 20px;
    padding: 20px;
}
button#add-book{
    grid-area: button;
    justify-self: center;
    font-weight: bold;
    font-size: 18px;
    background-color: var(--accent2);
    padding: 10px 20px;
    color: var(--white);
    font-weight: bold;
    box-shadow: 2px 2px 2px #0003;
}
label[for="title"] {grid-area: title-label;}
input#title {grid-area: title-input;}
label[for="summary"] {grid-area: summary-label;}
textarea#summary {grid-area: summary-input;}
label[for="pages"] {grid-area: pages-label;}
input#pages {grid-area: pages-input;}
label[for="read"] {grid-area: read-label;}
input#read {grid-area: read-input;}
label[for="favorite"] {grid-area: favorite-label;}
input#favorite {grid-area: favorite-input;}
input[type="checkbox"] {justify-self: start;}
input, textarea, button {border-radius: 5px;}
input,
textarea {
    background-color: var(--accent1-light);
    border: 1px solid #0004;
    box-shadow: 2px 2px 2px #0002;
}
textarea {resize: none;}
input[type="checkbox"]:unchecked {background-color: red;}


.container.top {
    grid-area: top;

    background-color: var(--white);
    box-shadow: 4px 4px 4px #0003;
    z-index: 1;
    padding: 20px;
}

.container.form {
    width: 50%;
    height: 100%;

    display: grid;
    grid-template-columns: 1fr 4fr 1fr;
    grid-template-rows: 1fr 4fr;
    grid-template-areas:
        "title-label title-input button"
        "summary-label summary-input .";
    gap: 20px;
}

.container.bottom {
    grid-area: bottom;
    background-color: var(--gray);

    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 20px;
    padding: 20px;
    z-index: 0;
}

.card {
    background-color: var(--white);
    height: 200px;
    border-radius: 10px;
    border-left: 8px solid var(--accent2);
    padding: 10px;
    box-shadow: 4px 4px 4px #0003;

    display: grid;
    grid-template-columns: 1fr 20px 20px 20px;
    grid-template-rows: 1fr 4fr 20px;
    grid-template-areas:
    "title pages pages pages"
    "summary summary summary summary"
    ". read favorite delete";
    gap: 10px;
}
.card>.title {
    grid-area: title;
    font-weight: 700;
}
.card>.pages {
    grid-area: pages;
    justify-self: end;
    opacity: 0.5;
}
.card>.summary {
    grid-area: summary;
    color: var(--offblack);
    font-size: 16px;
}
.card>.read {grid-area: read;}
.card>.favorite {grid-area: favorite;}
.card>.delete {grid-area: delete;}

.read {
    -webkit-mask-image: url(img/eye-outline.svg);
    mask-image: url(img/eye-outline.svg);
    background-color: var(--black);
    opacity: 0.5;
}
.favorite {
    -webkit-mask-image: url(img/star-outline.svg);
    mask-image: url(img/star-outline.svg);
    background-color: var(--black);
    opacity: 0.5;
}
.delete {
    -webkit-mask-image: url(img/close-circle.svg);
    mask-image: url(img/close-circle.svg);
    background-color: var(--red);
    opacity: 0.5;
}
.read.toggled {
    -webkit-mask-image: url(img/eye.svg);
    mask-image: url(img/eye.svg);
}
.favorite.toggled {
    -webkit-mask-image: url(img/star.svg);
    mask-image: url(img/star.svg);
}
.read:hover,
.favorite:hover,
.delete:hover {
    opacity: 1;
}
.read.toggled {background-color: green;}
.favorite.toggled {background-color: darkgoldenrod;}

